<resources>
    <!-- User fields -->

    <!-- Login Screen strings -->
    <string name="title_activity_login">Sign in</string>
    <string name="labelUsername">E-mail:</string>
    <string name="labelPass">Password:</string>
    <string name="buttonLogin">Sign In</string>
    <string name="buttonForgotPass">Forgot Password?</string>
    <string name="buttonNewUser">New User</string>

    <!-- Main Screen strings -->
    <string name="title_activity_main">TritonStudy Main</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_logout">Log out</string>

    <string name="buttonProfile">Profile</string>
    <string name="buttonSearch">Search</string>
    <string name="buttonDB">Database</string>
    <string name="buttonMap">UCSD Map</string>

    <!-- Profile Screen strings -->
    <string name="title_activity_profile_edit">Edit Profile</string>
    <string name="title_activity_profile">My TritonStudy User Profile</string>

    <!-- Strings for Edit Screens -->
    <string name="title_activity_edit_times">Edit Study Times</string>
    <string name="title_activity_edit_courses">Edit Courses</string>

    <!-- Strings for Create new user Screens -->
    <string name="title_activity_create_user_info">Create New User: Basic User Info</string>
    <string name="title_activity_create_user_classes">Create New User: Select Classes</string>
    <string name="title_activity_create_user_classes_confirm">Create New User: Confirm Classes</string>
    <string name="title_activity_create_user_verify">Create New User: Verification</string>
    <string name="title_activity_test_receive_results">testReceiveResults</string>

    <!-- Strings for Hamburger menu items -->
    <string name="bmenu_main">Main menu</string>
    <string name="bmenu_profile">Profile</string>
    <string name="bmenu_logout">Log out</string>

</resources>
