<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.cse100.wi16.tritonstudy.LoginActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/linearLayout">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="112dp"
            android:id="@+id/imageView3"
            android:background="@drawable/logo_ucsd" />

        <ImageView
            android:layout_width="212dp"
            android:layout_height="180dp"
            android:id="@+id/imageView4"
            android:background="@drawable/logo_tritonstudy"
            android:layout_gravity="center_horizontal" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/labelUsername"
                android:layout_row="0"
                android:layout_column="0"
                android:text="@string/labelUsername" />

            <EditText
                android:layout_width="248dp"
                android:layout_height="wrap_content"
                android:id="@+id/editTextUsername"
                android:layout_row="0"
                android:layout_column="1"
                android:singleLine="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/labelPass"
                android:layout_row="1"
                android:layout_column="0"
                android:text="@string/labelPass" />

            <EditText
                android:layout_width="248dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/editTextPassword"
                android:layout_row="1"
                android:layout_column="1" />

            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_columnSpan="2"
                android:layout_gravity="center_horizontal">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/buttonForgotPass"
                    android:id="@+id/buttonForgotPass"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:textColor="#ffffff"
                    android:background="#ff8700"
                    android:padding="12dp"
                    android:layout_gravity="center"
                    android:layout_margin="4dp" />

                <Button
                    android:layout_width="107dp"
                    android:layout_height="40dp"
                    android:text="@string/buttonNewUser"
                    android:id="@+id/buttonNewUser"
                    android:layout_row="1"
                    android:layout_column="1"
                    android:layout_gravity="center|left"
                    android:textColor="#ffffff"
                    android:background="#ff8700"
                    android:padding="12dp"
                    android:layout_margin="4dp" />

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="192dp"
                    android:layout_height="40dp"
                    android:text="@string/buttonLogin"
                    android:id="@+id/buttonLogin"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:layout_columnSpan="2"
                    android:layout_gravity="center"
                    android:background="#ff8700"
                    android:textColor="#ffffff"
                    android:padding="12dp"
                    android:layout_margin="4dp"
                    android:onClick="doLogin" />
            </GridLayout>

        </GridLayout>

    </LinearLayout>

</RelativeLayout>
